<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="csp_main_phaseManager_snapshot" Id="{c75bfed8-6e1a-0e5e-06f6-8af9d2175bed}">
    <Declaration><![CDATA[(*********************************** G.D S.p.A. - Technical Department ***********************************
============= PROGRAM INFO ============
FOLDER:             TBD
MACHINES INVOLVED:  TBD 

============= DESCRIPTION =============
WU phase manager snapshot struct definition

============= REVISIONS ===============
Date		Version	 	Author      	Description             
----------	-------		------------  	--------------------------------------------
2020/06/19 	0000.00	 	G.Cera 			Creation of the PRG

**********************************************************************************************************)

(*$S desc := Snapshot; $*)
TYPE 
	csp_main_phaseManager_snapshot:	STRUCT
		message:            	message;
		reason:             	STRING := '';			(*$ It contains detailed information abaout faults $*)
		job_not_scheduled:		BOOL;
		job_pending:			BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>